<resources>
    <string name="app_name">EstaFort Driver</string>

    <string name="no_network">Check your Internet Connection and Try again</string>
    <string name="sign_in_cancelled">Signing was cancelled</string>
    <string name="request_placed">Request Placed</string>
    <string name="divider_bullet">•</string>
    <string name="user">User</string>
    <string name="status">Status</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_profile">Profile</string>
    <string name="message_no_results">Oops, couldn\'t find any data now. Try again later</string>
    <string name="your_requests">EstaFort Driver</string>
    <string name="default_notification_channel_name" translatable="true">Esta-Fort</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="hint_enter_username">Username</string>
    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_telephone">Telephone</string>
    <string name="hint_enter_location">Location</string>
    <string name="check">Check</string>

    <string-array name="statustoggle">
        <item>Confirm</item>
        <item>Arrived</item>
        <item>Start</item>
        <item>Completed Trip</item>
        <item>Cancel Trip</item>
    </string-array>


</resources>
