<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    app:cardCornerRadius="2dp"
    android:clickable="true"
    android:elevation="8dp"
    android:foreground="?attr/selectableItemBackground"
    >

    <RelativeLayout
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="#FEFEFE"
        android:paddingBottom="16dp"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:paddingTop="18dp"
        tools:ignore="UselessParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/hahaha"
            android:layout_toStartOf="@+id/call"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.Subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_placed"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/AppTheme.TextDivider"
                android:text="@string/divider_bullet" />

            <com.github.curioustechizen.ago.RelativeTimeTextView
                style="@style/AppTheme.Subheader"
                android:id="@+id/request_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="15 mins ago" />
        </LinearLayout>




            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/call"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="16dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                tools:ignore="ContentDescription"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_phone_black_24dp"
               />


        <LinearLayout
            android:id="@+id/hahaha1"
            android:gravity="center_vertical"
            android:layout_below="@+id/hahaha"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/AppTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greySecondary"
                android:text="@string/user" />

            <TextView
                style="@style/AppTheme.TextDivider"
                android:text="@string/divider_bullet" />

            <TextView
                android:id="@+id/driverName"
                style="@style/AppTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greySecondary"
                tools:text="Precious Keyz" />

        </LinearLayout>



        <LinearLayout
            android:gravity="center_vertical"
            android:layout_below="@+id/hahaha1"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/restaurant_item_category"
                style="@style/AppTheme.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greySecondary"
                android:text="@string/status" />

            <TextView
                android:id="@+id/restaurant_item_city_divider"
                style="@style/AppTheme.TextDivider"
                android:text="@string/divider_bullet" />

            <TextView
                android:id="@+id/status"
                style="@style/AppTheme.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greySecondary"
                tools:text="Completed" />

        </LinearLayout>
    </RelativeLayout>






</android.support.v7.widget.CardView>